feat: add POST and GET endpoints for toolclass
